src/objects/PSA_Apex_Log__c.object
<CustomObject>
    <description>Used to log messages to assist with custom apex code statuses/troubleshooting</description>
    <fields>
        <fullName>PSA_Apex_Method__c</fullName>
        <description>Method name</description>
        <label>Apex Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Batch_Number__c</fullName>
        <description>An incrementing number identifier used to group a set of logs together</description>
        <externalId>true</externalId>
        <inlineHelpText>An incrementing number identifier used to group a set of logs together</inlineHelpText>
        <label>Batch Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Id_List__c</fullName>
        <description>List of Ids related to the apex log message</description>
        <inlineHelpText>List of Ids related to the apex log message</inlineHelpText>
        <label>Id List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Log_DateTime__c</fullName>
        <description>Date and Time the log event occurred</description>
        <label>Log DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSA_Log_Level__c</fullName>
        <description>The logging level of the record.  Useful when truncating logs before insert</description>
        <inlineHelpText>The logging level of the record.  Useful when truncating logs before insert</inlineHelpText>
        <label>Log Level</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Long_Message__c</fullName>
        <description>Verbose logging message</description>
        <inlineHelpText>Verbose logging message</inlineHelpText>
        <label>Long Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Message__c</fullName>
        <description>Short message limited to 255 characters</description>
        <inlineHelpText>Short message</inlineHelpText>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Method_Sequence__c</fullName>
        <description>Order in which the method was executed from the class</description>
        <label>Method Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Sequence__c</fullName>
        <description>User-defined sequence of messages.  Useful for sorting by the order of events.</description>
        <inlineHelpText>User-defined sequence of messages.  Useful for sorting by the order of events.</inlineHelpText>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Rule Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Summary Line Refresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSA Project Balances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timecard Daily Cap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PSA Apex Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Source__c</columns>
        <columns>PSA_Sequence__c</columns>
        <columns>PSA_Message__c</columns>
        <columns>PSA_Long_Message__c</columns>
        <columns>PSA_Id_List__c</columns>
        <columns>PSA_Batch_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{0000000}</displayFormat>
        <label>Apex Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Apex Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>